[package]
name = "ekey"
version = "0.4.0"
edition = "2021"
authors = ["Markus Reiter <me@reitermark.us>"]
license = "MIT OR Apache-2.0"
readme = "ReadMe.md"
description = "A `no_std` library for parsing EKEY LAN Converter packets."
documentation = "https://docs.rs/ekey"
repository = "https://github.com/reitermarkus/ekey-rs"
homepage = "https://github.com/reitermarkus/ekey-rs"

[dependencies]
nom = "7"
serde = { version = "1", features = ["derive"] }

[features]
std = []
default = ["std"]
